[package]
name = "final-practice"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
ed25519-dalek = "2.1.1"
poem = "3.1.11"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
solana-client = "2.3.2"
solana-sdk = "2.3.1"
spl-token = { version = "8.0.0", features = ["no-entrypoint"] }
tokio = { version = "1.45.1", features = ["full"] }
